// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The AvatarCloud component should accept a maxAvatarSize 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "11%",
        "position": "absolute",
        "top": "11%",
        "width": "10%",
        "zIndex": 0,
      }
    }
  >
    <Image
      getXYPositions={[Function]}
      onLoad={[Function]}
      order={0}
      orientation="portrait"
      size={10}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "11%",
          "opacity": 0,
          "position": "absolute",
          "top": "11%",
          "width": "10%",
          "zIndex": 0,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "11%",
        "position": "absolute",
        "top": "11%",
        "width": "10%",
        "zIndex": 1,
      }
    }
  >
    <Image
      getXYPositions={[Function]}
      onLoad={[Function]}
      order={1}
      orientation="portrait"
      size={10}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "11%",
          "opacity": 0,
          "position": "absolute",
          "top": "11%",
          "width": "10%",
          "zIndex": 1,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "11%",
        "position": "absolute",
        "top": "11%",
        "width": "10%",
        "zIndex": 2,
      }
    }
  >
    <Image
      getXYPositions={[Function]}
      onLoad={[Function]}
      order={2}
      orientation="portrait"
      size={10}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "11%",
          "opacity": 0,
          "position": "absolute",
          "top": "11%",
          "width": "10%",
          "zIndex": 2,
        }
      }
    />
  </View>
</View>
`;

exports[`The AvatarCloud component should accept a minAvatarSize 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "10%",
        "position": "absolute",
        "top": "10%",
        "width": "21%",
        "zIndex": 0,
      }
    }
  >
    <Image
      getXYPositions={[Function]}
      onLoad={[Function]}
      order={0}
      orientation="portrait"
      size={21}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "10%",
          "opacity": 0,
          "position": "absolute",
          "top": "10%",
          "width": "21%",
          "zIndex": 0,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "10%",
        "position": "absolute",
        "top": "10%",
        "width": "21%",
        "zIndex": 1,
      }
    }
  >
    <Image
      getXYPositions={[Function]}
      onLoad={[Function]}
      order={1}
      orientation="portrait"
      size={21}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "10%",
          "opacity": 0,
          "position": "absolute",
          "top": "10%",
          "width": "21%",
          "zIndex": 1,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "10%",
        "position": "absolute",
        "top": "10%",
        "width": "21%",
        "zIndex": 2,
      }
    }
  >
    <Image
      getXYPositions={[Function]}
      onLoad={[Function]}
      order={2}
      orientation="portrait"
      size={21}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "10%",
          "opacity": 0,
          "position": "absolute",
          "top": "10%",
          "width": "21%",
          "zIndex": 2,
        }
      }
    />
  </View>
</View>
`;

exports[`The AvatarCloud component should accept a primaryAvatar 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "width": "50%",
        "zIndex": 100,
      }
    }
  >
    <Image
      onLoad={[Function]}
      orientation="portrait"
      size={50}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "opacity": 0,
          "width": "50%",
          "zIndex": 100,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "11%",
        "position": "absolute",
        "top": "11%",
        "width": "13%",
        "zIndex": 0,
      }
    }
  >
    <Image
      getXYPositions={[Function]}
      onLoad={[Function]}
      order={0}
      orientation="portrait"
      size={13}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "11%",
          "opacity": 0,
          "position": "absolute",
          "top": "11%",
          "width": "13%",
          "zIndex": 0,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "11%",
        "position": "absolute",
        "top": "11%",
        "width": "13%",
        "zIndex": 1,
      }
    }
  >
    <Image
      getXYPositions={[Function]}
      onLoad={[Function]}
      order={1}
      orientation="portrait"
      size={13}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "11%",
          "opacity": 0,
          "position": "absolute",
          "top": "11%",
          "width": "13%",
          "zIndex": 1,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "11%",
        "position": "absolute",
        "top": "11%",
        "width": "13%",
        "zIndex": 2,
      }
    }
  >
    <Image
      getXYPositions={[Function]}
      onLoad={[Function]}
      order={2}
      orientation="portrait"
      size={13}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "11%",
          "opacity": 0,
          "position": "absolute",
          "top": "11%",
          "width": "13%",
          "zIndex": 2,
        }
      }
    />
  </View>
</View>
`;

exports[`The AvatarCloud component should render 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "10%",
        "position": "absolute",
        "top": "10%",
        "width": "15%",
        "zIndex": 0,
      }
    }
  >
    <Image
      getXYPositions={[Function]}
      onLoad={[Function]}
      order={0}
      orientation="portrait"
      size={15}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "10%",
          "opacity": 0,
          "position": "absolute",
          "top": "10%",
          "width": "15%",
          "zIndex": 0,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "10%",
        "position": "absolute",
        "top": "10%",
        "width": "15%",
        "zIndex": 1,
      }
    }
  >
    <Image
      getXYPositions={[Function]}
      onLoad={[Function]}
      order={1}
      orientation="portrait"
      size={15}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "10%",
          "opacity": 0,
          "position": "absolute",
          "top": "10%",
          "width": "15%",
          "zIndex": 1,
        }
      }
    />
  </View>
  <View
    animate={null}
    customAnimate={null}
    onReady={false}
    style={
      Object {
        "aspectRatio": 1,
        "backgroundColor": "#A5A5A5",
        "borderRadius": 1000,
        "left": "10%",
        "position": "absolute",
        "top": "10%",
        "width": "15%",
        "zIndex": 2,
      }
    }
  >
    <Image
      getXYPositions={[Function]}
      onLoad={[Function]}
      order={2}
      orientation="portrait"
      size={15}
      source={
        Array [
          Object {
            "cache": "force-cache",
            "uri": "https://picsum.photos/200",
            "url": "https://picsum.photos/200",
          },
        ]
      }
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 1000,
          "left": "10%",
          "opacity": 0,
          "position": "absolute",
          "top": "10%",
          "width": "15%",
          "zIndex": 2,
        }
      }
    />
  </View>
</View>
`;
